# src/routers/issuersRoutes.ts
@@ -18,5 +18,6 @@ export class IssuerRooutes {
         this.router.delete("/:issuerId/operators/:operatorId", this.authenController.authorizationAdmin, this.issuerController.deleteOperator);
         this.router.get("/:issuerId/operators/:operatorId", this.issuerController.getOperatorInfor);
         this.router.get("/:issuerId/operators", this.authenController.authorizationAdmin, this.issuerController.getListOperator);
+        this.router.get("/:issuerId/profile", this.issuerController.getIssuerInfor);
     }
 }
